# kairn

./: .gitignore  BENCHMARKS.md  README.md  pyproject.toml
.claude/plans/: 2026-07-07-kairn-item4-entity-extraction-diversification.md  2026-07-07-kairn-item5-preference-mcp-judo.md  2026-07-07-kairn-wow9-import.md
.github/workflows/: ci.yml
scripts/: backfill_embeddings.py  calibrate_halflives.py  kairn-recall-adversarial.py
scripts/data/: kairn-recall-adversarial.json
src/kairn/: __init__.py  cli.py  config.py  server.py
src/kairn/auth/: jwt.py  permissions.py
src/kairn/core/: embeddings.py  experience.py  fts.py  graph.py  ideas.py  intelligence.py  router.py
src/kairn/diagnostic/: __init__.py  checks.py  registry.py
src/kairn/events/: bus.py
src/kairn/importers/: __init__.py  claude_code.py  git.py  redact.py
src/kairn/models/: edge.py  experience.py
src/kairn/schema/: workspace.sql
src/kairn/storage/: base.py  metadata_store.py  sqlite_store.py
tests/: redaction_corpus.py  test_auth.py  test_bitemporal.py  test_cli.py  test_cli_claude_code_import.py  test_cli_import.py  test_embeddings.py  test_experience.py  test_graph.py  test_graph_validation.py  test_importers_claude_code.py  test_importers_git.py  test_importers_redact.py  test_intelligence.py  test_intelligence_candidates.py  test_kn_doctor.py  test_kn_judge.py  test_semantic_recall.py  test_semantic_storage.py  test_server.py  test_storage.py  test_weakness_audit_wave3.py
